# KickMaker

./: .gitignore  .gitmodules  CMakeLists.txt  KickMaker.jucer  KickMaker.sln  KickMaker.vcproj  KickMaker.vcxproj  LICENSE.md  README.md  README.txt
Builds/Linux/: Makefile
Graphics/originals/: demo-splash.psd  kickmaker_somehwateditable.psd  onoff.psd  qmark.psd
JuceLibraryCode/: AppConfig.h  JuceHeader.h
KickMaker.xcodeproj/: project.pbxproj
Source/: AdsrEnvelope.cpp  BufferProcessor.h  FrequencyCalculator.cpp  FrequencyCalculator.h  NoiseWave.cpp  NoiseWave.h  Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SawtoothWave.cpp  SawtoothWave.h  SineWave.cpp  SineWave.h  SquareWave.cpp  SquareWave.h  TriangleWave.cpp  TriangleWave.h  Waveform.h
Source/Effects/: AdsrEnvelope.cpp  AdsrEnvelope.h  Compressor.cpp  Compressor.h  LopassFilter.cpp  LopassFilter.h  WaveSmoother.cpp  WaveSmoother.h
Source/Waveforms/: SineWave.cpp  SquareWave.cpp  (+1 more)
docs/: Doxyfile  License.rtf  Manual.doc
mac/: AU-Info.plist  App-Info.plist  KickMaker.exp  KickMaker.r  VST-Info.plist  xcode_app_prefix.h  xcode_au_prefix.h  xcode_vst_prefix.h
presets/: Deep.xml  Default.xml  Distorted.xml  Generic.xml  High.xml  Midrange.xml  Weird.xml
source/: KickMakerAU.cpp  KickMakerCore.cpp  KickMakerCore.h  KickMakerEditor.h  KickMakerEditorOpen.cpp  KickMakerVST.cpp  KickMakerVST.h  defaults.h
source.old/: KickMakerAU.cpp  KickMakerAU.h  KickMakerEditor.cpp  KickMakerEditor.h  coords.h
windows/: KickMaker.def  KickMaker.rc  resource.h
(+113 files in other folders)
